Version 3.1.2

- Use "res" instead of "long" to define the object block
- Slightly improve loop optimization by re-arranging optimize passes

Version 3.1.1

- Make leaf functions share temporary registers and local variables
- Do not inline functions whose calling conventions
  require stack manipulation

Version 3.1.0

- Added (preliminary) --p2 support for Propeller 2.
- Added fcache support for Propeller 1.
- If a function is called only once, and we can eliminate it by
  inlining it, do so.
  
Version 3.0.6

- Added a check to make sure the immediate is on the right operand
  (previously "mov #2, 3" was parsed the same as "mov 2, #3")

Version 3.0.5

- Added --eeprom option to produce an EEPROM file
- Added --cc= option to change C compiler
- Improved optimization of pin masks in some cases
- Allow {++ ... } to insert C++/C code inside PUB or PRI.
- Changed the __SPIN2X__ define to __SPINCVT__. The old __SPIN2X__
  symbol is still defined in the preprocessor for now, but is deprecated.
- Added a fastspin front end that mimics the openspin arguments.

Version 3.0.4

- Tweaked a few items in the GUI

Version 3.0.3

- Fixed a problem with the round() function not being recognized in
  C/C++ code, and with round() and trunc() output.
- Fixed abort with no explicit expression in C/C++

Version 3.0.2

- Added support for SPR and for arrays in cog memory generally.
- Allowed --data=cog

Version 3.0.1

- Fixed the distributed .zip file to have the correct spin2cpp
  versions.
- Added a Spin prefix function for --asm output (so other Spin
  compiler may be used)


Version 3.0.0

- Added a code generator to allow for PASM output. spin2cpp --asm can
  function as a compiler independent of PropGCC. With --code=hub it
  will produce LMM code, otherwise it produces COG code. Using
  --binary after --asm will cause a final binary to be produced. Using
  -g after --asm will cause the original Spin code to be inserted in
  the .pasm output.