@@ -1,0 +1,7 @@
+pub blah(n)
+  OUTA[3..0] := n
+  
+pub onepin(n)
+  OUTA[4] := n
+
+
