@@ -2,6 +2,7 @@ Version 3.1.2
 
 - Use "res" instead of "long" to define the object block
 - Slightly improve loop optimization by re-arranging optimize passes
+- Fix multi-pin assignments to be atomic
 
 Version 3.1.1
 
